--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "three": "^0.132.2",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
