--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "homepage": "http://kiskovi97.github.io/ReactCV",
   "name": "react-cv",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
@@ -11,7 +11,7 @@
     "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^17.0.2",
     "react-ga": "^3.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "three": "^0.132.2",
     "web-vitals": "^1.1.1"
   },
