--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-ga": "^3.3.0",
     "react-scripts": "^5.0.1",
     "three": "^0.132.2",
-    "web-vitals": "^1.1.1"
+    "web-vitals": "^1.1.1",
+    "aws-sdk": "^2.1692.0"
   },
   "scripts": {
     "predeploy": "npm run build",
