--- a/package.json
+++ b/package.json
@@ -4,17 +4,14 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.12.0",
-    "@testing-library/react": "^11.2.6",
-    "@testing-library/user-event": "^12.8.3",
+    "aws-sdk": "^2.1692.0",
     "react": "^17.0.2",
     "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^17.0.2",
     "react-ga": "^3.3.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^0.0.0",
     "three": "^0.132.2",
-    "web-vitals": "^1.1.1",
-    "aws-sdk": "^2.1692.0"
+    "web-vitals": "^1.1.1"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -25,10 +22,6 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
