--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "private": true,
   "dependencies": {
     "aws-sdk": "^2.1692.0",
-    "react": "^17.0.2",
-    "react-animate-on-scroll": "^2.1.5",
-    "react-dom": "^17.0.2",
-    "react-ga": "^3.3.0",
-    "react-scripts": "^0.0.0",
+    "react": "^18.0.0",
+    "react-animate-on-scroll": "^2.1.9",
+    "react-dom": "^18.0.0",
+    "react-ga": "^3.3.1",
+    "react-router": "^7.6.0",
+    "react-scripts": "^5.0.1",
     "three": "^0.132.2",
     "web-vitals": "^1.1.1"
   },
@@ -21,8 +22,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-  },
+  "eslintConfig": {},
   "browserslist": {
     "production": [
       ">0.2%",
