--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "private": true,
   "dependencies": {
     "aws-sdk": "^2.1692.0",
+    "framer-motion": "^12.18.1",
     "react": "^18.0.0",
-    "react-animate-on-scroll": "^2.1.9",
     "react-dom": "^18.0.0",
     "react-ga": "^3.3.1",
     "react-router": "^7.6.0",
