--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^5.0.0",
-    "react-router-dom": "^5.2.0"
+    "gh-pages": "^6.3.0"
   }
 }
