--- a/package.json
+++ b/package.json
@@ -8,11 +8,9 @@
     "framer-motion": "^12.18.1",
     "react": "^18.0.2",
     "react-dom": "^18.0.2",
-    "react-router-dom": "^6.2.1",
-    "@types/react-dom": "^18.0.2",
-    "@types/react-router-dom": "^5.3.2",
+    "react-router": "6.30.1",
+    "react-router-dom": "6.30.1",
     "react-ga": "^3.3.1",
-    "react-router": "^7.6.0",
     "react-scripts": "^5.0.1",
     "web-vitals": "^5.0.0"
   },
